<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/camera_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/ar_fragment"
        android:name="com.google.ar.sceneform.ux.ArFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/users_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:layout_gravity="bottom"
        android:visibility="visible">

        <Button
            android:id="@+id/checkParkingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_parking"
            app:layout_constraintStart_toStartOf="@+id/anchorToggle"
            app:layout_constraintTop_toBottomOf="@+id/anchorToggle" />

        <Switch
            android:id="@+id/anchorToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:text="@string/anchor"
            app:layout_constraintStart_toStartOf="@+id/localizeToggle"
            app:layout_constraintTop_toBottomOf="@+id/localizeToggle"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:id="@+id/localizeToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:text="@string/localize"
            app:layout_constraintStart_toStartOf="@+id/coordinatesText"
            app:layout_constraintTop_toBottomOf="@+id/coordinatesText"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/cameraTranslation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:text="@string/camera_translation"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cameraAnglesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:text="@string/camera_angles"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="@+id/cameraTranslation"
            app:layout_constraintTop_toBottomOf="@+id/cameraTranslation" />

        <TextView
            android:id="@+id/coordinatesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:text="@string/device_coordinates"
            app:layout_constraintStart_toStartOf="@+id/cameraAnglesText"
            app:layout_constraintTop_toBottomOf="@+id/cameraAnglesText" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>